--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "class-validator": "^0.14.2",
     "prisma": "^6.16.3",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
